[package]
name = "sysmon-mqtt-rs"
version = "0.1.0"
authors = ["Jared Dantis <jareddantis@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rumqttc = "0.24.0"
